--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,7 @@
       <!-- Custom CSS -->
       <link rel="stylesheet" href="/public/css/app.css">
 
+      {% include google_analytics.html %}
   </head>
   <body>
     <div class="header">
